# manipulation-cli

./: README.md  pyproject.toml
src/manipulation_cli/: __init__.py  analysis.py  cli.py
